[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Marcin Binkowski"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
psycopg2-binary = "^2.9.3"
passlib = "^1.7.4"
python-dotenv = "^0.19.2"
FastAPI-SQLAlchemy = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"
ipdb = "^0.13.9"
tox = "^3.24.5"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length=88
use_parentheses=true
multi_line_output=3
lines_between_types=1
include_trailing_comma=true
force_grid_wrap=0


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
